src/main/java/comp/gen/languageParser.java
package comp.gen;// Generated from /home/adam/Uczelnia/JFTT/L3/Compiler/src/main/language.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class languageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, IF=3, COMMA=4, NUM=5, LSQBRACKET=6, RSQBRACKET=7, SEMICOLON=8, 
		VAR=9, BEGIN=10, END=11, ASSIGN=12, ELSE=13, THEN=14, ENDIF=15, WHILE=16, 
		REPEAT=17, DO=18, ENDWHILE=19, UNTIL=20, FOR=21, FROM=22, DOWNTO=23, TO=24, 
		ENDFOR=25, READ=26, WRITE=27, PLUS=28, MINUS=29, DIV=30, TIMES=31, MOD=32, 
		EQ=33, NEQ=34, LE=35, GE=36, LEQ=37, GEQ=38, WHITESPACE=39, PIDENTIFIER=40, 
		CHARACTER=41;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_declarations = 2, RULE_commands = 3, 
		RULE_command = 4, RULE_expression = 5, RULE_condition = 6, RULE_value = 7, 
		RULE_identifier = 8, RULE_possibleWhitespace = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "declarations", "commands", "command", "expression", 
			"condition", "value", "identifier", "possibleWhitespace"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, "'IF'", "','", null, "'['", "']'", "';'", "'VAR'", 
			"'BEGIN'", "'END'", "'ASSIGN'", "'ELSE'", "'THEN'", "'ENDIF'", "'WHILE'", 
			"'REPEAT'", "'DO'", "'ENDWHILE'", "'UNTIL'", "'FOR'", "'FROM'", "'DOWNTO'", 
			"'TO'", "'ENDFOR'", "'READ'", "'WRITE'", "'PLUS'", "'MINUS'", "'DIV'", 
			"'TIMES'", "'MOD'", "'EQ'", "'NEQ'", "'LE'", "'GE'", "'LEQ'", "'GEQ'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "COMMENT", "IF", "COMMA", "NUM", "LSQBRACKET", "RSQBRACKET", 
			"SEMICOLON", "VAR", "BEGIN", "END", "ASSIGN", "ELSE", "THEN", "ENDIF", 
			"WHILE", "REPEAT", "DO", "ENDWHILE", "UNTIL", "FOR", "FROM", "DOWNTO", 
			"TO", "ENDFOR", "READ", "WRITE", "PLUS", "MINUS", "DIV", "TIMES", "MOD", 
			"EQ", "NEQ", "LE", "GE", "LEQ", "GEQ", "WHITESPACE", "PIDENTIFIER", "CHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public languageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declare_StartContext extends ProgramContext {
		public List<PossibleWhitespaceContext> possibleWhitespace() {
			return getRuleContexts(PossibleWhitespaceContext.class);
		}
		public PossibleWhitespaceContext possibleWhitespace(int i) {
			return getRuleContext(PossibleWhitespaceContext.class,i);
		}
		public TerminalNode VAR() { return getToken(languageParser.VAR, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(languageParser.BEGIN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END() { return getToken(languageParser.END, 0); }
		public TerminalNode EOF() { return getToken(languageParser.EOF, 0); }
		public Declare_StartContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterDeclare_Start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitDeclare_Start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitDeclare_Start(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Nodeclare_StartContext extends ProgramContext {
		public List<PossibleWhitespaceContext> possibleWhitespace() {
			return getRuleContexts(PossibleWhitespaceContext.class);
		}
		public PossibleWhitespaceContext possibleWhitespace(int i) {
			return getRuleContext(PossibleWhitespaceContext.class,i);
		}
		public TerminalNode BEGIN() { return getToken(languageParser.BEGIN, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END() { return getToken(languageParser.END, 0); }
		public TerminalNode EOF() { return getToken(languageParser.EOF, 0); }
		public Nodeclare_StartContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterNodeclare_Start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitNodeclare_Start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitNodeclare_Start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Declare_StartContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				possibleWhitespace();
				setState(23);
				match(VAR);
				setState(24);
				match(WHITESPACE);
				setState(25);
				declarations();
				setState(26);
				match(WHITESPACE);
				setState(27);
				match(BEGIN);
				setState(28);
				match(WHITESPACE);
				setState(29);
				commands(0);
				setState(30);
				possibleWhitespace();
				setState(31);
				match(END);
				setState(33);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(32);
					match(EOF);
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new Nodeclare_StartContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				possibleWhitespace();
				setState(36);
				match(BEGIN);
				setState(37);
				match(WHITESPACE);
				setState(38);
				commands(0);
				setState(39);
				match(END);
				setState(40);
				possibleWhitespace();
				setState(42);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(41);
					match(EOF);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	 
		public DeclarationsContext() { }
		public void copyFrom(DeclarationsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Put_Symbol1Context extends DeclarationsContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode COMMA() { return getToken(languageParser.COMMA, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public Put_Symbol1Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Symbol1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Symbol1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Symbol1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Symbol2Context extends DeclarationsContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public Put_Symbol2Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Symbol2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Symbol2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Symbol2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Table2Context extends DeclarationsContext {
		public Token left;
		public Token right;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode LSQBRACKET() { return getToken(languageParser.LSQBRACKET, 0); }
		public TerminalNode RSQBRACKET() { return getToken(languageParser.RSQBRACKET, 0); }
		public List<TerminalNode> NUM() { return getTokens(languageParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(languageParser.NUM, i);
		}
		public Put_Table2Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Table2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Table2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Table2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Table1Context extends DeclarationsContext {
		public Token left;
		public Token right;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode LSQBRACKET() { return getToken(languageParser.LSQBRACKET, 0); }
		public TerminalNode RSQBRACKET() { return getToken(languageParser.RSQBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(languageParser.COMMA, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public List<TerminalNode> NUM() { return getTokens(languageParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(languageParser.NUM, i);
		}
		public Put_Table1Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Table1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Table1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Table1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Put_Table1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				possibleWhitespace();
				setState(47);
				match(PIDENTIFIER);
				setState(48);
				match(LSQBRACKET);
				setState(49);
				((Put_Table1Context)_localctx).left = match(NUM);
				setState(50);
				match(T__0);
				setState(51);
				((Put_Table1Context)_localctx).right = match(NUM);
				setState(52);
				match(RSQBRACKET);
				setState(53);
				match(COMMA);
				setState(54);
				match(WHITESPACE);
				setState(55);
				declarations();
				}
				break;
			case 2:
				_localctx = new Put_Symbol1Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				possibleWhitespace();
				setState(58);
				match(PIDENTIFIER);
				setState(59);
				match(COMMA);
				setState(60);
				match(WHITESPACE);
				setState(61);
				declarations();
				}
				break;
			case 3:
				_localctx = new Put_Table2Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				possibleWhitespace();
				setState(64);
				match(PIDENTIFIER);
				setState(65);
				match(LSQBRACKET);
				setState(66);
				((Put_Table2Context)_localctx).left = match(NUM);
				setState(67);
				match(T__0);
				setState(68);
				((Put_Table2Context)_localctx).right = match(NUM);
				setState(69);
				match(RSQBRACKET);
				}
				break;
			case 4:
				_localctx = new Put_Symbol2Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				possibleWhitespace();
				setState(72);
				match(PIDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandsContext extends ParserRuleContext {
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
	 
		public CommandsContext() { }
		public void copyFrom(CommandsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GetCommandContext extends CommandsContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public GetCommandContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterGetCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitGetCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitGetCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GetCommandsContext extends CommandsContext {
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public GetCommandsContext(CommandsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterGetCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitGetCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitGetCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		return commands(0);
	}

	private CommandsContext commands(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CommandsContext _localctx = new CommandsContext(_ctx, _parentState);
		CommandsContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_commands, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new GetCommandContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(77);
			command();
			setState(78);
			match(WHITESPACE);
			}
			_ctx.stop = _input.LT(-1);
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new GetCommandsContext(new CommandsContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_commands);
					setState(80);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(81);
					command();
					setState(82);
					match(WHITESPACE);
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfElse_StatementContext extends CommandContext {
		public CommandsContext ifblock;
		public CommandsContext elseblock;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode IF() { return getToken(languageParser.IF, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(languageParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(languageParser.ELSE, 0); }
		public TerminalNode ENDIF() { return getToken(languageParser.ENDIF, 0); }
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public IfElse_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterIfElse_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitIfElse_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitIfElse_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Repeat_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode REPEAT() { return getToken(languageParser.REPEAT, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(languageParser.UNTIL, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Repeat_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterRepeat_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitRepeat_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitRepeat_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class For_StatementContext extends CommandContext {
		public ValueContext v1;
		public Token direction;
		public ValueContext v2;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode FOR() { return getToken(languageParser.FOR, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode FROM() { return getToken(languageParser.FROM, 0); }
		public TerminalNode DO() { return getToken(languageParser.DO, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode ENDFOR() { return getToken(languageParser.ENDFOR, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode TO() { return getToken(languageParser.TO, 0); }
		public TerminalNode DOWNTO() { return getToken(languageParser.DOWNTO, 0); }
		public For_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterFor_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitFor_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitFor_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Write_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode WRITE() { return getToken(languageParser.WRITE, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Write_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterWrite_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitWrite_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitWrite_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class If_StatementContext extends CommandContext {
		public List<PossibleWhitespaceContext> possibleWhitespace() {
			return getRuleContexts(PossibleWhitespaceContext.class);
		}
		public PossibleWhitespaceContext possibleWhitespace(int i) {
			return getRuleContext(PossibleWhitespaceContext.class,i);
		}
		public TerminalNode IF() { return getToken(languageParser.IF, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(languageParser.THEN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
